# rdm-bids

./: .dockerignore  .gitignore  .nojekyll  Dockerfile  Makefile  README.md  _quarto-ci.yml  _quarto-ipynb.yml  _quarto.yml  _quarto_ci.yml  _variables.yml  apa.csl  convert_colab.py  exercise1.html  exercise1.ipynb  exercise1.qmd  exercise1_colab.html  exercise1_colab.ipynb  exercise2.html  exercise2.ipynb  exercise2.qmd  exercise2_colab.html  exercise2_colab.ipynb  exercise3.qmd  faq.html  faq.qmd  index.html  index.qmd  postBuild  prepare_colab.py  pyproject.toml  references.bib  requirements.txt  robots.txt  search.json  setup.html  setup.qmd  sitemap.xml
.github/workflows/: codespell.yml  docker.yml  publish.yml
site_libs/bootstrap/: bootstrap-e1789c076edafc4a9c4241db7c9dcc68.min.css  bootstrap-ff9de43c12c5769272d6d0d5187c3c55.min.css
