[project]
name = "rdm-bids"
version = "0.1.0"
description = "Research Data Management with BIDS"
readme = "README.md"
authors = [
    { name = "Lennart Wittkuhn", email = "lennart.wittkuhn@tutanota.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bash-kernel>=0.10.0",
    "bids-validator-deno>=2.3.1",
    "dcm2niix>=1.0.20250506",
    "heudiconv>=1.3.4",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
]
